sample-app/k8s/sample-app.yaml
---
# Source: sample-app/charts/mysql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-mysql
  namespace: default
  labels:
    app: sample-mysql
    chart: "mysql-1.3.0"
    release: "sample"
    heritage: "Tiller"
  annotations:
spec:
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
  selector:
    app: sample-mysql

---
# Source: sample-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample
  namespace: default
  labels: 
    app: sample
    env: dev
    component: backend
    version: latest
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 8086
      targetPort: 8086
      protocol: TCP
  selector: 
    app: sample
    env: dev
    component: backend
    version: latest

---
# Source: sample-app/charts/mysql/templates/tests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-mysql-test
  namespace: default
  labels:
    app: sample-mysql
    chart: "mysql-1.3.0"
    heritage: "Tiller"
    release: "sample"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: sample-test
      image: "mysql:5.7.14"
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: sample-mysql-test
  - name: tools
    emptyDir: {}
  restartPolicy: Never

---
# Source: sample-app/charts/mysql/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-mysql
  namespace: default
  labels:
    app: sample-mysql
    chart: "mysql-1.3.0"
    release: "sample"
    heritage: "Tiller"

spec:
  template:
    metadata:
      labels:
        app: sample-mysql
    spec:
      containers:
      - name: sample-mysql
        image: "mysql:5.7.14"
        imagePullPolicy: "IfNotPresent"
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          
        ports:
        - name: mysql
          containerPort: 3306
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        # - name: extras
        #   mountPath: /usr/share/extras
        #   readOnly: true
        
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: sample-mysql
      # - name: extras
      #   emptyDir: {}
      

---
# Source: sample-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
  namespace: default
  labels: 
    app: sample
    env: dev
    component: backend
    version: latest
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: 
      app: sample
      env: dev
      component: backend
      version: latest
  template:
    metadata:
      labels: 
        app: sample
        env: dev
        component: backend
        version: latest
    spec:
      containers:
      - name: "backend"
        image: "chromko/sample-app:latest"
        ports:
          - name: http
            containerPort: 8086
        imagePullPolicy: Always
---
# Source: sample-app/templates/ingress-http.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-http
  namespace: default
  labels: 
    app: sample
    env: dev
    component: backend
    version: latest
  annotations:
    # kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/proxy-body-size: 50m
    kubernetes.io/ingress.allow-http: "true"
    nginx.ingress.kubernetes.io/client-body-buffer-size: 50m
    nginx.ingress.kubernetes.io/client-max-body-size: 50m
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 90s
    nginx.ingress.kubernetes.io/proxy-read-timeout: 90s
    
spec:
  rules:
    - host: sample-sample-app.local
      http:
        paths:
          - path: /
            backend:
              serviceName: sample
              servicePort: http

    - host: sample-sample-app.local
      http:
        paths:
          - path: /
            backend:
              serviceName: sample
              servicePort: http
---
# Source: sample-app/charts/mysql/templates/configurationFiles-configmap.yaml

---
# Source: sample-app/charts/mysql/templates/initializationFiles-configmap.yaml

---
# Source: sample-app/charts/mysql/templates/servicemonitor.yaml
